[package]
name = "weave-draft"
version = "0.0.0"
edition = "2024"
description = "A crate for representing and manipulating weaving drafts"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/erys/weave-draft"
keywords = ["weaving", "weave"]
categories = ["data-structures"]

[dependencies]
